Fixed :target marker on mobile devices

--- a/templates/css/_style.css
+++ b/templates/css/_style.css
@@ -207,7 +207,7 @@ h1, h2, h3, h4, h5, h6{font-family:var(--font-family-header);color:var(--color-t
 	h3 {font-size:var(--font-size-h3);margin:var(--spacing-text-block-l) 0 var(--spacing-text-block-m)}
 	h4 {font-size:var(--font-size-m);}
 	h2:target, h3:target{position:relative}
-		h2:target:before, h3:target:before{content:'';display:block;position:absolute;left:calc(var(--spacing-page-borders) * -1);border-left:calc(var(--line-height-compact) / 2) solid var(--color-highlight);border-top:calc(var(--line-height-compact) / 2) solid transparent;border-bottom:calc(var(--line-height-compact) / 2) solid transparent}
+		h2:target:before, h3:target:before{content:'';display:block;position:absolute;left:calc(var(--spacing-page-borders) * -1);border-left:calc(var(--spacing-page-borders) / 2) solid var(--color-highlight);border-top:calc(var(--line-height-compact) / 2) solid transparent;border-bottom:calc(var(--line-height-compact) / 2) solid transparent}
 hr {background:var(--color-border-page);height:1px;border:none;margin:var(--spacing-text-block-m) 0}
 figure, picture{display:block;max-width:100%;margin:var(--spacing-text-block-m) 0;height:auto}
 	figure picture, figure img{margin:0 auto;}
